force-app/main/default/objects/Student_Group__c.object
<CustomObject>
    <fields>
        <fullName>SG_Description__c</fullName>
        <description>[Peoplesoft] - Examples include: All Arizona Academic Team, CI reqs alt Sun Devil Success, CI requires Sun Devil Success, Denied Pathway Eligible Student, Eastern AZ College, HONORS GD STND LOW DIV &lt; 2107, HONORS GD, STND LOW DIV &gt;= 2107, HONORS GD STND UPP DIV &lt; 2107, HONORS GD STND UPP DIV &gt;= 2107, HONORS, PROV-LOWER DIVISION, HONORS, PROV-UPPER DIVISION, Huazhong Unv Sci&amp;Tech students (HUST), Lake Havasu, MLFTC ESP provisional admits, National Achievement Semifinalist, National Hispanic Scholar Finalist, National Merit Semifinalist, New College GAIN, Not Admissible recvd CC invite, Provisional Admt - NR students, RHHE, SDS 2013 - 11 credit hour option, SDS 2013 - 4 credit hour option, SDS 2013 Exceptions (Veteran, Athlete, Tribal Scholar), SDS 2013 Overall group, Sichun University, Sponsored International App, TA Prospect-Signed Agreement, W.P. Carey Provisional, WUE Western Undergrad Exchange</description>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Arizona Academic Team</fullName>
                </value>
                <value>
                    <fullName>CI reqs alt Sun Devil Success</fullName>
                </value>
                <value>
                    <fullName>CI requires Sun Devil Success</fullName>
                </value>
                <value>
                    <fullName>Denied Pathway Eligible Student</fullName>
                </value>
                <value>
                    <fullName>Eastern AZ College</fullName>
                </value>
                <value>
                    <fullName>HONORS GD STND LOW DIV &lt; 2107</fullName>
                </value>
                <value>
                    <fullName>HONORS GD STND LOW DIV &gt;= 2107</fullName>
                </value>
                <value>
                    <fullName>HONORS GD STND UPP DIV &lt; 2107</fullName>
                </value>
                <value>
                    <fullName>HONORS GD STND UPP DIV &gt;= 2107</fullName>
                </value>
                <value>
                    <fullName>HONORS, PROV-LOWER DIVISION</fullName>
                </value>
                <value>
                    <fullName>HONORS, PROV-UPPER DIVISION</fullName>
                </value>
                <value>
                    <fullName>Huazhong Unv Sci&amp;Tech students (HUST)</fullName>
                </value>
                <value>
                    <fullName>Lake Havasu</fullName>
                </value>
                <value>
                    <fullName>MLFTC ESP provisional admits</fullName>
                </value>
                <value>
                    <fullName>National Achievement Semifinalist</fullName>
                </value>
                <value>
                    <fullName>National Hispanic Scholar Finalist</fullName>
                </value>
                <value>
                    <fullName>National Merit Semifinalist</fullName>
                </value>
                <value>
                    <fullName>New College GAIN</fullName>
                </value>
                <value>
                    <fullName>Not Admissible recvd CC invite</fullName>
                </value>
                <value>
                    <fullName>Provisional Admt - NR students</fullName>
                </value>
                <value>
                    <fullName>RHHE</fullName>
                </value>
                <value>
                    <fullName>SDS 2013 - 11 credit hour option</fullName>
                </value>
                <value>
                    <fullName>SDS 2013 - 4 credit hour option</fullName>
                </value>
                <value>
                    <fullName>SDS 2013 Exceptions (Veteran, Athlete, Tribal Scholar)</fullName>
                </value>
                <value>
                    <fullName>SDS 2013 Overall group</fullName>
                </value>
                <value>
                    <fullName>Sichun University</fullName>
                </value>
                <value>
                    <fullName>Sponsored International App</fullName>
                </value>
                <value>
                    <fullName>TA Prospect-Signed Agreement</fullName>
                </value>
                <value>
                    <fullName>W.P. Carey Provisional</fullName>
                </value>
                <value>
                    <fullName>WUE Western Undergrad Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SG_Effective_Date__c</fullName>
        <description>[Peoplesoft] - Date of Student group assignment</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SG_PeopleSoft_Code__c</fullName>
        <description>[Peoplesoft] - Peoplesoft code</description>
        <label>PeopleSoft Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SG_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - Checkbox that shows if the student group is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SG_Contact__c</fullName>
        <description>[Peoplesoft] - Relationship to contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Groups</relationshipLabel>
        <relationshipName>Student_Groups_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>Student Group information from PeopleSoft</description>
    <label>Student Group</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Student Group Label</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>