force-app/main/default/objects/Student_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SG_Status__c</columns>
    <columns>SG_Contact__c</columns>
    <columns>SG_Effective_Date__c</columns>
    <columns>SG_PeopleSoft_Code__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>